syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy";
option java_outer_classname = "PixGrpc";
option objc_class_prefix = "HLW";

package br.com.zupacademy;

service PixKeyService {
  rpc generateKey (KeyRequest) returns (KeyResponse) {}
}

enum KeyType {
  UNKNOWN_KEY = 0;
  CPF = 1;
  EMAIL = 2;
  PHONE = 3;
  RANDOM = 4;
}

enum AccountType {
  UNKNOWN_ACCOUNT = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message KeyRequest {
  KeyType keyType = 1;
  AccountType accountType = 2;
  string clientId = 3;
  string key = 4;
}

message KeyResponse {
  string pixId = 1;
}